tentativa de update

--- a/html/compostagem.html
+++ b/html/compostagem.html
@@ -8,7 +8,7 @@
         </style>
         <link rel="stylesheet" href="/css/missaoambiental.css">
         <script src="/js/missaoambiental.js"></script>
-        <title>Sobre</title>
+        <title>Voluntarie-se</title>
     </head>
     <body>
         <div>
@@ -28,14 +28,18 @@
         <br>
         <br>
         <br>
-        <h2 id="quemsomos">Quem Somos</h2>
-        <p id="sobre">A Missão Ambiental é uma associação civil sem fins lucrativos que
-            cria espaços de preservação e convivência para a comunidade de vida na Terra
-            buscando garantir a otimização dos recursos ambientais com produção de alimentos
-            e regeneração do solo, incentiva a participação dos moradores do entorno e busca
-            parceiros locais para realizar suas atividades. Além disso, conta com um amplo
-            espaço cedido pela iniciativa privada onde são desenvolvidas atividades de
-            educação ambiental, horta comunitária, agroecologia, viveiro de mudas nativas
-            para as ações de plantios, mutirões, cursos e oficinas.
-        </body>
-    </html>
+        <h2 id="tcompostagem">Compostagem</h2>
+        <p id="compostagem">Você já ouviu falar de compostagem? É o processo de reciclagem do resíduo
+            orgânico em que transforma restos de frutas, legumes e verduras em composto
+            orgânico (adubo natural). Esse adubo pode ser utilizado na agricultura urbana,
+            em jardins e plantas, substituindo o uso de produtos químicos. Existem diversos
+            métodos de compostagem como vermicompostagem (compostagem com minhocas),
+            compostagem por valetas, compostagem seca, biodigestor e a compostagem
+            termofílica.
+            <br>
+            <br>
+            A Míssão Ambiental Ipiranga busca realizar a gestão dos resíduos orgânicos de
+            maneira colaborativa com a comunidade local. A compostagem termofílica deu
+            início em 29 de janeiro de 2023 com a implantação da leira 01.</p>
+
+    </body>
