--- a/html/missaoambiental.html
+++ b/html/missaoambiental.html
@@ -6,7 +6,7 @@
         <title>Missão Ambiental</title>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bebas+Neue&family=Bree+Serif&family=Playfair+Display:wght@400;500;600&family=Staatliches&display=swap');
-            </style>
+        </style>
         <link rel="stylesheet" href="/css/missaoambiental.css">
         <script src="/js/missaoambiental.js"></script>
     </head>
@@ -31,9 +31,8 @@
                     </nav>
                 </header>
             </div>
-            <div class="img" id="fundo">
-                <img src="/image/fundoprincipal.jpg" alt="">
-            </div>
+            <!-- <div class="img" id="fundo"> <img src="/image/fundoprincipal.jpg" alt="">
+            </div> -->
             <style>
                 #fundo {
                     pointer-events: none;
@@ -72,10 +71,11 @@
                             Agricultura
                         </div>
                         <div class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo animi atque
-                            aliquid pariatur voluptatem numquam, quisquam. Neque est voluptates doloribus!
+                            A agricultura é a atividade humana de cultivo de plantas para produção de
+                            alimentos, fibras, combustíveis e outros recursos envolvendo práticas como
+                            plantio, colheita e gestão de recursos naturais.
                         </div>
-                        <a href="https://www.youtube.com.br">
+                        <a href="agricultura.html">
                             <button>Saiba Mais</button>
                         </a>
                     </div>
@@ -89,10 +89,11 @@
                             Horta Comunitária
                         </div>
                         <div class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum eos ut
-                            consectetur numquam ullam fuga animi laudantium nobis rem molestias.
+                            Uma horta comunitária é um espaço compartilhado onde membros da comunidade
+                            cultivam alimentos, ervas e plantas juntos, promovendo a segurança alimentar, a
+                            sustentabilidade e a cooperação local.
                         </div>
-                        <a href="https://www.youtube.com.br">
+                        <a href="horta.html">
                             <button>Saiba Mais</button>
                         </a>
                     </div>
@@ -106,10 +107,11 @@
                             Compostagem
                         </div>
                         <div class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod excepturi nemo
-                            commodi sint eum ipsam odit atque aliquam officia impedit.
+                            A compostagem é um processo de decomposição natural de materiais orgânicos por
+                            microorganismos, resultando em um fertilizante orgânico rico em nutrientes para
+                            melhorar o solo.
                         </div>
-                        <a href="https://www.youtube.com.br">
+                        <a href="compostagem.html">
                             <button>Saiba Mais</button>
                         </a>
                     </div>
@@ -123,10 +125,12 @@
                             Abelhas Sem Ferrão
                         </div>
                         <div class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo animi atque
-                            aliquid pariatur voluptatem numquam, quisquam. Neque est voluptates doloribus!
+                            Abelhas sem ferrão são uma variedade de abelhas que, ao contrário das abelhas
+                            melíferas, não possuem ferrão. Elas são importantes polinizadoras e produzem
+                            mel, cera e outros produtos, sendo criadas em colônias por apicultores em
+                            algumas regiões tropicais.
                         </div>
-                        <a href="https://www.youtube.com.br">
+                        <a href="abelhas.html">
                             <button>Saiba Mais</button>
                         </a>
                     </div>
@@ -140,10 +144,11 @@
                             Captação Água da Chuva
                         </div>
                         <div class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo animi atque
-                            aliquid pariatur voluptatem numquam, quisquam. Neque est voluptates doloribus!
+                            A captação de água da chuva é o processo de coleta, armazenamento e uso para
+                            fins como irrigação e limpeza. Essa prática sustentável ajuda a conservar
+                            recursos hídricos e reduzir a dependência de fontes convencionais de água.
                         </div>
-                        <a href="https://www.youtube.com.br">
+                        <a href="chuva.html">
                             <button>Saiba Mais</button>
                         </a>
                     </div>
@@ -157,10 +162,11 @@
                             Reciclagem
                         </div>
                         <div class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo animi atque
-                            aliquid pariatur voluptatem numquam, quisquam. Neque est voluptates doloribus!
+                            A reciclagem é um processo de coleta, processamento e transformação de materiais
+                            descartados em novos produtos. Ela contribui para a sustentabilidade ao
+                            economizar recursos e reduzir a poluição.
                         </div>
-                        <a href="https://www.youtube.com.br">
+                        <a href="reciclagem.html">
                             <button>Saiba Mais</button>
                         </a>
                     </div>
@@ -174,10 +180,11 @@
                             Espécies Nativas
                         </div>
                         <div class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo animi atque
-                            aliquid pariatur voluptatem numquam, quisquam. Neque est voluptates doloribus!
+                            Espécies nativas são organismos que se desenvolvem naturalmente em uma
+                            determinada região. Elas desempenham papéis essenciais nos ecossistemas locais e
+                            são adaptadas às condições ambientais específicas de sua área de origem.
                         </div>
-                        <a href="https://www.youtube.com.br">
+                        <a href="nativas.html">
                             <button>Saiba Mais</button>
                         </a>
                     </div>
@@ -191,10 +198,11 @@
                             Oficinas Educação Ambiental
                         </div>
                         <div class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo animi atque
-                            aliquid pariatur voluptatem numquam, quisquam. Neque est voluptates doloribus!
+                            Atividade prática e interativa que visa aumentar a conscientização e o
+                            entendimento das questões ambientais, envolvendo ações e discussões na
+                            comunidade para promover a sustentabilidade e a preservação do meio ambiente.
                         </div>
-                        <a href="https://www.youtube.com.br">
+                        <a href="oficinas.html">
                             <button>Saiba Mais</button>
                         </a>
                     </div>
