--- a/html/sobre.html
+++ b/html/sobre.html
@@ -11,6 +11,7 @@
         <title>Sobre</title>
     </head>
     <body>
+        <div class="background-image"></div>
         <div>
             <header class="header">
                 <a href="missaoambiental.html" class="logo">missão ambiental</a>
