--- a/html/compostagem.html
+++ b/html/compostagem.html
@@ -10,7 +10,7 @@
         <script src="/js/missaoambiental.js"></script>
         <title>Voluntarie-se</title>
     </head>
-    <body>
+    <body id="compostagemback">
         <div>
             <header class="header">
                 <a href="missaoambiental.html" class="logo">missão ambiental</a>
@@ -23,23 +23,35 @@
                     <a href="voluntario.html">Voluntarie-se</a>
                 </nav>
             </header>
+            <style>
+                
+            </style>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h2 id="tcompostagem">Compostagem</h2>
-        <p id="compostagem">Você já ouviu falar de compostagem? É o processo de reciclagem do resíduo
-            orgânico em que transforma restos de frutas, legumes e verduras em composto
-            orgânico (adubo natural). Esse adubo pode ser utilizado na agricultura urbana,
-            em jardins e plantas, substituindo o uso de produtos químicos. Existem diversos
-            métodos de compostagem como vermicompostagem (compostagem com minhocas),
-            compostagem por valetas, compostagem seca, biodigestor e a compostagem
-            termofílica.
+        <div class="wrapper">
+            <img id = "imgcomp" src="/image/compostagem.jpeg" alt="">
+            <div class="text-box">
+                <h2 id="tcompostagem">Compostagem</h2>
+                <br>
+                <p id="compostagem">Você já ouviu falar de compostagem? É o processo de
+                    reciclagem do resíduo orgânico em que transforma restos de frutas, legumes e
+                    verduras em composto orgânico (adubo natural). Esse adubo pode ser utilizado na
+                    agricultura urbana, em jardins e plantas, substituindo o uso de produtos
+                    químicos. Existem diversos métodos de compostagem como vermicompostagem
+                    (compostagem com minhocas), compostagem por valetas, compostagem seca,
+                    biodigestor e a compostagem termofílica.
+                    <br>
+                    <br>
+                    A Míssão Ambiental Ipiranga busca realizar a gestão dos resíduos orgânicos de
+                    maneira colaborativa com a comunidade local. A compostagem termofílica deu
+                    início em 29 de janeiro de 2023 com a implantação da leira 01.
+                    <br>
+                    <br>
+                    Abaixo é possível conferir a tabela excel com os dados de todas as sessões realizadas da compostagem comunitária.
+                
+                </p>
+            </div>
             <br>
             <br>
-            A Míssão Ambiental Ipiranga busca realizar a gestão dos resíduos orgânicos de
-            maneira colaborativa com a comunidade local. A compostagem termofílica deu
-            início em 29 de janeiro de 2023 com a implantação da leira 01.</p>
-
+            <a href="https://docs.google.com/spreadsheets/d/1aUgt68Sbee6HMlpUryOCU6IjUA0mTgXHPtYmqG8MhBc/edit#gid=0"><img id="imgexcel" src="/image/IMAGEM-EXCEL.jpg" alt=""></a>
+        </div>
     </body>
