--- a/html/sobre.html
+++ b/html/sobre.html
@@ -10,8 +10,7 @@
         <script src="/js/missaoambiental.js"></script>
         <title>Sobre</title>
     </head>
-    <body>
-        <div class="background-image"></div>
+    <body id = "sobreback">
         <div>
             <header class="header">
                 <a href="missaoambiental.html" class="logo">missão ambiental</a>
