--- a/html/missaoambiental.html
+++ b/html/missaoambiental.html
@@ -15,11 +15,11 @@
             <div>
                 <header class="header">
                     <a href="/html/missaoambiental.html" class="logo"><img
-                        src="/image/logocerto.png"
+                        src="/imagens/Logo.png"
                         alt="logo image"
-                        width="60px"
+                        width="200px"
                         height="60px"
-                        style="margin-left: 10px;">
+                        >
                     </a>
                     <nav class="navbar">
                         <a href="missaoambiental.html">Home</a>
@@ -37,7 +37,7 @@
                 }
             </style>
             <br>
-            <p id="titulo">missão ambiental</p>
+            <p id="titulo">Missão Ambiental</p>
             <br>
             <div class="background-image"></div>
             <div class="blog-card">
