--- a/html/missaoambiental.html
+++ b/html/missaoambiental.html
@@ -2,33 +2,36 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Missão Ambiental</title>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bebas+Neue&family=Bree+Serif&family=Playfair+Display:wght@400;500;600&family=Staatliches&display=swap');
         </style>
         <link rel="stylesheet" href="/css/missaoambiental.css">
         <script src="/js/missaoambiental.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <body>
         <main>
             <div>
                 <header class="header">
-                    <a href="/html/missaoambiental.html" class="logo"><img
+                    <a href="/html/missaoambiental.html" class="logo">
+                        <img
                         src="/imagens/Logo.png"
-                        alt="logo image"
-                        width="200px"
-                        height="60px"
-                        >
-                    </a>
+                        alt="logo image">
+                        <h5>Missão Ambiental</h5>
+                    </a> 
                     <nav class="navbar">
-                        <a href="missaoambiental.html">Home</a>
-                        <a href="sobre.html">Sobre</a>
-                        <a href="galeria.html">Galeria</a>
-                        <a href="parceiros.html">Parceiros</a>
-                        <a href="contato.html">Contato</a>
-                        <a href="voluntario.html">Voluntarie-se</a>
+                        <a href="missaoambiental.html"><button class="botao">Home</button></a>
+                        <a href="sobre.html"><button class="botao">Sobre</button></a>
+                        <a href="galeria.html"><button class="botao">Galeria</button></a>
+                        <a href="projetos.html"><button class="botao">Projetos</button></a>
                     </nav>
+                    <div class="menu_hamburguer">
+                        <div class="hamburguer_linha"></div>
+                        <div class="hamburguer_linha"></div>
+                        <div class="hamburguer_linha"></div>
+                    </div>
                 </header>
             </div>
             <style>
@@ -206,6 +209,11 @@
                     </div>
                 </div>
             </div>
+
+            <section>
+
+            </section>
         </main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
