--- a/html/parceiros.html
+++ b/html/parceiros.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/css/missaoambiental.css">
         <script src="/js/missaoambiental.js"></script>
         <title>Parceiros</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <body>
         <div>
@@ -33,4 +34,9 @@
             São Paulo, ICC (Instituto Cristovão Colombo), FUNSAI (Fundação Nossa Senhora
             Auxiliadora do Ipiranga), CADES Ipiranga (Conselho Regional do Meio Ambiente,
             Desenvolvimento Sustentável e Cultura de Paz da Subprefeitura Ipiranga), Muda
-            Ipiranga, entre outros.</p>
+            Ipiranga, entre outros.
+        </p>
+        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    </body>
+</html>
