--- a/html/missaoambiental.html
+++ b/html/missaoambiental.html
@@ -22,16 +22,18 @@
                         <h5>Missão Ambiental</h5>
                     </a> 
                     <nav class="navbar">
-                        <a href="missaoambiental.html"><button class="botao">Home</button></a>
                         <a href="sobre.html"><button class="botao">Sobre</button></a>
                         <a href="galeria.html"><button class="botao">Galeria</button></a>
                         <a href="projetos.html"><button class="botao">Projetos</button></a>
+                        <a href="parceiros.html"><button class="botao">Parceiros</button></a>
                     </nav>
-                    <div class="menu_hamburguer">
-                        <div class="hamburguer_linha"></div>
-                        <div class="hamburguer_linha"></div>
-                        <div class="hamburguer_linha"></div>
-                    </div>
+                    <button class="botao_hamb">
+                        <div class="menu_hamburguer">
+                            <div class="hamburguer_linha"></div>
+                            <div class="hamburguer_linha"></div>
+                            <div class="hamburguer_linha"></div>
+                        </div>
+                    </button>
                 </header>
             </div>
             <style>
