--- a/html/missaoambiental.html
+++ b/html/missaoambiental.html
@@ -29,7 +29,29 @@
                         <a href="parceiros.html"><button class="botao">Parceiros</button></a>
                     </nav>
 
-                    <span id="icone" class="material-symbols-outlined" onclick="clickMenu()">
+                    <div id=" menu">
+                        <div id="menu-bar" onclick="clickMenu()">
+                            <div id="bar1" class="bar">
+                            </div>
+                            <div id="bar2" class="bar">
+                            </div>
+                            <div id="bar3" class="bar">
+                            </div>
+                        </div>
+                        <nav class="nav" id="nav">
+                            <ul>
+                                <li><a href="filiais.html">Filiais</a></li>
+                                <li><a href="voluntario.html">Voluntarie-se</a></li>
+                                <li><a href="doacao.html">Doação</a></li>
+                                <li><a href="agenda.html">Agenda</a></li>
+                                <li><a href="facavocemesmo.html">Faça Você Mesmo</a></li>
+                                <li><a href="contato.html">Contato</a></li>
+                            </ul>
+                        </nav>
+                        <div class="menu-bg" id="menu-bg"></div>
+
+                    </div>
+                    <!-- <span id="icone" class="material-symbols-outlined" onclick="clickMenu()">
                         menu
                         </span>
                         <menu id="itens">
@@ -41,10 +63,22 @@
                                 <li><a href="facavocemesmo.html">Faça Você Mesmo</a></li>
                                 <li><a href="contato.html">Contato</a></li>
                             </ul>
-                        </menu>
+                        </menu> -->
                 </header>
             </div>
-            <style>
+            <article>
+                <div class="bloco">
+            
+                </div>
+
+
+
+
+
+
+
+            </article>
+            <!-- <style>
                 #fundo {
                     pointer-events: none;
                 }
@@ -222,7 +256,7 @@
 
             <section>
 
-            </section>
+            </section> -->
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
