--- a/html/missaoambiental.html
+++ b/html/missaoambiental.html
@@ -4,10 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Missão Ambiental</title>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bebas+Neue&family=Bree+Serif&family=Playfair+Display:wght@400;500;600&family=Staatliches&display=swap');
-        </style>
         <link rel="stylesheet" href="/css/missaoambiental.css">
+        <link rel="stylesheet" href="/css/header.css">
         <script src="/js/missaoambiental.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -29,29 +27,7 @@
                         <a href="parceiros.html"><button class="botao">Parceiros</button></a>
                     </nav>
 
-                    <div id=" menu">
-                        <div id="menu-bar" onclick="clickMenu()">
-                            <div id="bar1" class="bar">
-                            </div>
-                            <div id="bar2" class="bar">
-                            </div>
-                            <div id="bar3" class="bar">
-                            </div>
-                        </div>
-                        <nav class="nav" id="nav">
-                            <ul>
-                                <li><a href="filiais.html">Filiais</a></li>
-                                <li><a href="voluntario.html">Voluntarie-se</a></li>
-                                <li><a href="doacao.html">Doação</a></li>
-                                <li><a href="agenda.html">Agenda</a></li>
-                                <li><a href="facavocemesmo.html">Faça Você Mesmo</a></li>
-                                <li><a href="contato.html">Contato</a></li>
-                            </ul>
-                        </nav>
-                        <div class="menu-bg" id="menu-bg"></div>
-
-                    </div>
-                    <!-- <span id="icone" class="material-symbols-outlined" onclick="clickMenu()">
+                    <span id="icone" class="material-symbols-outlined" onclick="clickMenu()">
                         menu
                         </span>
                         <menu id="itens">
@@ -63,12 +39,12 @@
                                 <li><a href="facavocemesmo.html">Faça Você Mesmo</a></li>
                                 <li><a href="contato.html">Contato</a></li>
                             </ul>
-                        </menu> -->
+                        </menu>  
                 </header>
             </div>
             <article>
                 <div class="bloco">
-            
+
                 </div>
 
 
@@ -78,6 +54,7 @@
 
 
             </article>
+
             <!-- <style>
                 #fundo {
                     pointer-events: none;
