--- a/html/missaoambiental_sissi.html
+++ b/html/missaoambiental_sissi.html
@@ -9,11 +9,15 @@
     </head>
     <body>
         <header>
-            <nav id="cor" class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+            <nav class="navbar navbar-expand-lg bg-verde-forte fixed-top p-2">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Navbar</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                  <a class="logo navbar-brand" href="/html/missaoambiental_sissi.html"><img
+                    src="/imagens/Logo.png"
+                    alt="logo image">
+                    <h5 class="titulo">Missão Ambiental</h5></a>
+
+                  <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon botao-menu icon-bar"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
