--- a/html/missaoambiental_sissi.html
+++ b/html/missaoambiental_sissi.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Missão Ambiental</title>
         <link rel="stylesheet" href="/css/header_sissi.css">
+        <link rel="stylesheet" href="/css/article.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <body>
@@ -33,42 +34,45 @@
                       <li class="nav-item botao mb-2 px-1">
                         <a class="nav-link active" href="/html/parceiros.html">Parceiros</a>
                       </li>
-                      <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                      </li> -->
                     </ul>
-                    <form class="d-flex mt-2" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
-                      <button class="btn btn-outline-success pesquisa border" type="submit">Procurar</button>
-                    </form>
+                    <div>
+                      <form class="d-flex mt-2" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
+                        <button class="btn btn-outline-success pesquisa border" type="submit">Procurar</button>
+                      </form>
+                    </div>
                   </div>
                 </div>
               </nav>
         </header>
-          <br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br>
+          <article>
+            <!-- <br><br><br><br> -->
+            <div class="img-container">
+              <img src="/imagens/img1_desktop_home.png" class="img-fluid img_fixed" alt="Monte de folhas verdes">
+              <h1 class="titulo_decorat tit_img">Missão Ambiental</h1>
+              <h3 class="subtitulo_font sub_img">Agricultura urbana, horta comunitária, compostagem, abelhas nativas sem ferrão, captação de água de chuva, reciclagem, espécies nativas, oficinas de educação ambiental</h3>
+            </div>
+          </article>
+          <!-- <section>
+            <h2 class="subtitulo_font">Criamos espaços de preservação e convivência para a comunidade de vida na Terra</h2>
+          </section>
+           -->
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+        
+        
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script src="/js/missaoambiental.js"></script>
     </body>
 </html>
