--- a/html/missaoambiental_sissi.html
+++ b/html/missaoambiental_sissi.html
@@ -49,10 +49,27 @@
             <!-- <br><br><br><br> -->
             <div class="img-container">
               <img src="/imagens/img1_desktop_home.png" class="img-fluid img_fixed" alt="Monte de folhas verdes">
-              <h1 class="titulo_decorat tit_img">Missão Ambiental</h1>
-              <h3 class="subtitulo_font sub_img">Agricultura urbana, horta comunitária, compostagem, abelhas nativas sem ferrão, captação de água de chuva, reciclagem, espécies nativas, oficinas de educação ambiental</h3>
+            </div>
+            <div class="container">
+              <div class="row">
+                  <div class="col-sm-12 col-md-6 col-lg-12">
+                    <h1 class="titulo_decorat tit_img">Missão Ambiental</h1>
+                  </div> 
+                  <div class="row">
+                  <div class="col-sm-12 col-md-6 col-lg-12">
+                    <h3 class="subtitulo_font sub_img ">Agricultura urbana, horta comunitária, compostagem, abelhas nativas sem ferrão, captação de água de chuva, reciclagem, espécies nativas, oficinas de educação ambiental</h3>
+                  </div>
+                  </div>
+              </div>
+              </div>
             </div>
           </article>
+          <div class="color-stripe"></div>
+          <section>
+            <img src="/imagens/Folha1_desktop_home.png" class="img-fluid folha_img" alt="Folha grande a direita da tela">
+          </section>
+
+
           <!-- <section>
             <h2 class="subtitulo_font">Criamos espaços de preservação e convivência para a comunidade de vida na Terra</h2>
           </section>
