--- a/html/missaoambiental_sissi.html
+++ b/html/missaoambiental_sissi.html
@@ -38,7 +38,7 @@
                     <div>
                       <form class="d-flex mt-2" role="search">
                         <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
-                        <button class="btn btn-outline-success pesquisa border" type="submit">Procurar</button>
+                        <button class="btn btn-outline-success pesquisa" type="submit">Procurar</button>
                       </form>
                     </div>
                   </div>
@@ -67,6 +67,21 @@
           <div class="color-stripe"></div>
           <section>
             <img src="/imagens/Folha1_desktop_home.png" class="img-fluid folha_img" alt="Folha grande a direita da tela">
+            <h1 class="subtitulo_font sec_1">Criamos espaços de preservação e convivência para a comunidade de vida na Terra </h1>
+            <h2 class="subtitulo_font sec_2">Buscando:</h2>
+            <div class="container px-4 text-center mt-4">
+              <div class="row gx-5">
+                <div class="col border mx-4 p-5 bloc_grey">
+                 <div class="p-3">Incentivar a participação dos moradores do entorno</div>
+                </div>
+                <div class="col border mx-4 p-5">
+                  <div class="p-3">Garantir a otimização dos recursos ambientais</div>
+                </div>
+                <div class="col border mx-4 p-5 bloc_grey">
+                  <div class="p-3">Parceiros locais para realizar suas atividades</div>
+                </div>
+              </div>
+            </div>
           </section>
 
 
