--- a/html/missaoambiental_sissi.html
+++ b/html/missaoambiental_sissi.html
@@ -69,19 +69,38 @@
             <img src="/imagens/Folha1_desktop_home.png" class="img-fluid folha_img" alt="Folha grande a direita da tela">
             <h1 class="subtitulo_font sec_1">Criamos espaços de preservação e convivência para a comunidade de vida na Terra </h1>
             <h2 class="subtitulo_font sec_2">Buscando:</h2>
-            <div class="container px-4 text-center mt-4">
-              <div class="row gx-5">
-                <div class="col border mx-4 p-5 bloc_grey">
-                 <div class="p-3">Incentivar a participação dos moradores do entorno</div>
+
+            <div class="container px-1 text-center mt-4">
+              <div class="row gx-5 justify-content-center">
+                <div class="col border mx-5 bloc_grey">
+                 <div class="icon_sec"><img src="/icones/icone_pessoas.png" alt="Icone de pessoas"></div>
+                  <div class="p-2 text_2 mb-5">Incentivar a participação dos moradores do entorno</div>
                 </div>
-                <div class="col border mx-4 p-5">
-                  <div class="p-3">Garantir a otimização dos recursos ambientais</div>
+                <div class="col border me-5 bloc_gre">
+                  <div class="icon_sec"><img src="/icones/mar.png" alt="Icone do mar"></div>
+                  <div class="p-2 text_2 mb-5">Garantir a otimização dos recursos ambientais</div>
                 </div>
-                <div class="col border mx-4 p-5 bloc_grey">
-                  <div class="p-3">Parceiros locais para realizar suas atividades</div>
+                <div class="col border me-5 bloc_grey">
+                  <div class="icon_sec"><img src="/icones/atividades.png" alt="Icone de uma lista de atividades"></div>
+                  <div class="p-2 text_2 mb-5">Parceiros locais para realizar suas atividades</div>
                 </div>
               </div>
             </div>
+            <h3 class="subtitulo_font sec_2 mt-3">com</h3>
+
+            <div class="container px-1 text-center mt-5">
+              <div class="row gx-5 align-items-center">
+                <div class="col border mx-5 px-1 bloc_gre">
+                  <div class="icon_sec"><img src="/icones/cenoura.png" alt="Icone de uma cenoura"></div>
+                 <div class="p-4 text_3 mb-5">Produção de alimentos</div>
+                </div>
+                <div class="col border mx-5 px-1 bloc_gre">
+                  <div class="icon_sec"><img src="/icones/solo.png" alt="Icone do solo"></div>
+                  <div class="p-4 text_3 mb-5">Regeneração do solo</div>
+                </div>
+              </div>
+            </div>
+            <img src="/imagens/Folha2_desktop_home.png" class="img-fluid folha2_img" alt="Folha grande no canto inferior esquerdo da tela">
           </section>
 
 
@@ -89,13 +108,6 @@
             <h2 class="subtitulo_font">Criamos espaços de preservação e convivência para a comunidade de vida na Terra</h2>
           </section>
            -->
-            <br><br><br><br><br><br>
-            <br><br><br><br><br><br>
-            <br><br><br><br><br><br>
-            <br><br><br><br><br><br>
-            <br><br><br><br><br><br>
-            <br><br><br><br><br><br>
-            <br><br><br><br><br><br>
             <br><br><br><br><br><br>
             <br><br><br><br><br><br>
             <br><br><br><br><br><br>
