--- a/html/missaoambiental_sissi.html
+++ b/html/missaoambiental_sissi.html
@@ -64,7 +64,9 @@
               </div>
             </div>
           </article>
+
           <div class="color-stripe"></div>
+
           <section>
             <img src="/imagens/Folha1_desktop_home.png" class="img-fluid folha_img" alt="Folha grande a direita da tela">
             <h1 class="subtitulo_font sec_1">Criamos espaços de preservação e convivência para a comunidade de vida na Terra </h1>
@@ -102,6 +104,27 @@
             </div>
             <img src="/imagens/Folha2_desktop_home.png" class="img-fluid folha2_img" alt="Folha grande no canto inferior esquerdo da tela">
           </section>
+
+          <div class="color-stripe mt-5"></div>
+
+          <section>
+            <div class="card mb-3" style="max-width: 540px;">
+              <div class="row g-0">
+                <div class="col-md-8">
+                  <div class="card-body p-4">
+                    <h5 class="card-title subtitulo_font">Contamos com um amplo espaço</h5>
+                    <p class="card-text text_com">Onde são desenvolvidas atividades de educação ambiental, horta comunitária, agroecologia e entre outros.</p>
+                    <p class="card-text text_com"><a class="btn btn-primary" href="/html/sobre.html" role="button">Saiba quem somos</a></p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <img src="/imagens/foto1_desktop_home.jpg" class="img-fluid rounded-start img_sec3" alt="Pessoas plantando">
+                </div>
+              </div>
+            </div>            
+          </section>
+
+
 
 
           <!-- <section>
