--- a/html/missaoambiental_sissi.html
+++ b/html/missaoambiental_sissi.html
@@ -108,11 +108,11 @@
           <div class="color-stripe mt-5"></div>
 
           <section>
-            <div class="card mb-3" style="max-width: 540px;">
+            <div class="card mb-3 sec_3 mw-100" style="max-width: 540px;">
               <div class="row g-0">
                 <div class="col-md-8">
                   <div class="card-body p-4">
-                    <h5 class="card-title subtitulo_font">Contamos com um amplo espaço</h5>
+                    <h5 class="card-title subtitulo_font mt-5">Contamos com um amplo espaço</h5>
                     <p class="card-text text_com">Onde são desenvolvidas atividades de educação ambiental, horta comunitária, agroecologia e entre outros.</p>
                     <p class="card-text text_com"><a class="btn btn-primary" href="/html/sobre.html" role="button">Saiba quem somos</a></p>
                   </div>
