--- a/html/missaoambiental_sissi.html
+++ b/html/missaoambiental_sissi.html
@@ -108,13 +108,13 @@
           <div class="color-stripe mt-5"></div>
 
           <section>
-            <div class="card mb-3 sec_3 mw-100" style="max-width: 540px;">
+            <div class="card sec_3">
               <div class="row g-0">
                 <div class="col-md-8">
                   <div class="card-body p-4">
-                    <h5 class="card-title subtitulo_font mt-5">Contamos com um amplo espaço</h5>
+                    <h5 class="card-title subtitulo_font">Contamos com um amplo espaço</h5>
                     <p class="card-text text_com">Onde são desenvolvidas atividades de educação ambiental, horta comunitária, agroecologia e entre outros.</p>
-                    <p class="card-text text_com"><a class="btn btn-primary" href="/html/sobre.html" role="button">Saiba quem somos</a></p>
+                    <p class="card-text text_com efects_3"><a class="btn btn-primary" href="/html/sobre.html" role="button">Saiba quem somos</a></p>
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -124,19 +124,50 @@
             </div>            
           </section>
 
+          <div class="color-stripe mt-6"></div>
 
-
-
-          <!-- <section>
-            <h2 class="subtitulo_font">Criamos espaços de preservação e convivência para a comunidade de vida na Terra</h2>
+          <section>
+            <div class="card sec_3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="/imagens/foto2_desktop_home.jpg" class="img-fluid rounded-start img_sec3" alt="Pessoas plantando">
+                </div>
+                <div class="col-md-8 text-end">
+                  <div class="card-body p-4">
+                    <h5 class="card-title subtitulo_font">Quer participar da Missão Ambiental?</h5>
+                    <p class="card-text text_com">Participe das nossas atividades e da nossa compostagem comunitária, nos ajudando a preservar o meio ambiente.</p>
+                    <p class="card-text text_com efects_3"><a class="btn btn-primary btn_4" href="/html/sobre.html" role="button">Voluntarie-se</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>            
           </section>
-           -->
+
+          <div class="color-stripe mt-6"></div>
+
+          <section>
+            <div class="card sec_3">
+              <div class="row g-0">
+                <div class="col-md-8">
+                  <div class="card-body p-4">
+                    <h5 class="card-title subtitulo_font">Faça uma doação!</h5>
+                    <p class="card-text text_com">Precisamos da sua ajuda para dispor de materiais para as ações no espaço.</p>
+                    <p class="card-text text_com efects_3"><a class="btn btn-primary" href="/html/sobre.html" role="button">Doe aqui!</a></p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <img src="/imagens/foto3_desktop_home.jpg" class="img-fluid rounded-start img_sec3" alt="Pessoas plantando">
+                </div>
+              </div>
+            </div>            
+          </section>
+
+          <div class="color-stripe mt-6"></div>
+
+
+  
             <br><br><br><br><br><br>
             <br><br><br><br><br><br>
-            <br><br><br><br><br><br>
-            <br><br><br><br><br><br>
-        
-        
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
