--- a/html/missaoambiental_sissi.html
+++ b/html/missaoambiental_sissi.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Missão Ambiental</title>
-        <link rel="stylesheet" href="/css/header_sissi.css">
-        <link rel="stylesheet" href="/css/article.css">
+        <link rel="stylesheet" href="/css/home/header.css">
+        <link rel="stylesheet" href="/css/home/article.css">
+        <link rel="stylesheet" href="/css/home/footer.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <body>
@@ -114,7 +115,7 @@
                   <div class="card-body p-4">
                     <h5 class="card-title subtitulo_font">Contamos com um amplo espaço</h5>
                     <p class="card-text text_com">Onde são desenvolvidas atividades de educação ambiental, horta comunitária, agroecologia e entre outros.</p>
-                    <p class="card-text text_com efects_3"><a class="btn btn-primary" href="/html/sobre.html" role="button">Saiba quem somos</a></p>
+                    <p class="card-text text_com"><a class="btn btn-primary" href="/html/sobre.html" role="button">Saiba quem somos</a></p>
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -136,7 +137,7 @@
                   <div class="card-body p-4">
                     <h5 class="card-title subtitulo_font">Quer participar da Missão Ambiental?</h5>
                     <p class="card-text text_com">Participe das nossas atividades e da nossa compostagem comunitária, nos ajudando a preservar o meio ambiente.</p>
-                    <p class="card-text text_com efects_3"><a class="btn btn-primary btn_4" href="/html/sobre.html" role="button">Voluntarie-se</a></p>
+                    <p class="card-text text_com"><a class="btn btn-primary btn_4" href="/html/voluntario.html" role="button">Voluntarie-se</a></p>
                   </div>
                 </div>
               </div>
@@ -152,7 +153,7 @@
                   <div class="card-body p-4">
                     <h5 class="card-title subtitulo_font">Faça uma doação!</h5>
                     <p class="card-text text_com">Precisamos da sua ajuda para dispor de materiais para as ações no espaço.</p>
-                    <p class="card-text text_com efects_3"><a class="btn btn-primary" href="/html/sobre.html" role="button">Doe aqui!</a></p>
+                    <p class="card-text text_com"><a class="btn btn-primary" href="/html/doacao.html" role="button">Doe aqui!</a></p>
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -164,12 +165,57 @@
 
           <div class="color-stripe mt-6"></div>
 
-
-  
-            <br><br><br><br><br><br>
-            <br><br><br><br><br><br>
-
-
+          <footer>
+            <div class="container overflow-hidden text-center footer_home">
+              <div class="row gx-5 align-items-center">
+                <div class="col-lg-2 col-md-4 col-sm-12 col1_footer">
+                 <div class="p-3"><a class="logo navbar-brand" href="/html/missaoambiental_sissi.html"><img
+                  src="/imagens/Logo.png"
+                  alt="logo image">
+                  <h5 class="titulo pe-3">Missão Ambiental</h5></a>
+                </div>
+                </div>
+              </div>
+              <div class="row gx-5 justify-content-evenly">
+                <div class="col-lg-2 col-md-4 col-sm-8">
+                  <div class="p-3"></div>
+                </div>
+                <div class="col-lg-2 col-md-4 col-sm-8 text-start">
+                  <div class="p-3">
+                    <h4 class="titulo_footer text_com">Início</h4>
+                    <p class="text_footer"><a class= "text_footer" href="/html/missaoambiental_sissi.html">Home</a></p>
+                    <p class="text_footer"><a class= "text_footer" href="/html/galeria.html">Galeria</a></p>
+                    <p class="text_footer"><a class= "text_footer" href="/html/projetos.html">Projetos</a></p>
+                  </div>
+                </div>
+                <div class="col-lg-2 col-md-4 col-sm-8 text-start">
+                  <div class="p-3">
+                    <h4 class="titulo_footer text_com">Sobre-nós</h4>
+                    <p class="text_footer"><a class= "text_footer" href="/html/sobre.html">Sobre</a></p>
+                    <p class="text_footer"><a class= "text_footer" href="/html/parceiros.html">Parceiros</a></p>
+                    <p class="text_footer"><a class= "text_footer" href="/html/filiais.html">Filiais</a></p>
+                  </div>
+                </div>
+                <div class="col-lg-2 col-md-4 col-sm-8 text-start">
+                  <div class="p-3">
+                    <h4 class="titulo_footer text_com">Ajude</h4>
+                    <p class="text_footer"><a class= "text_footer" href="/html/voluntario.html">Voluntarie-se</a></p>
+                    <p class="text_footer"><a class= "text_footer" href="/html/doacao.html">Doação</a></p>
+                  </div>
+                </div>
+                <div class="col-lg-2 col-md-4 col-sm-8 text-start align-self-center">
+                  <div class="p-3">
+                    <a class="me-3" href="https://www.facebook.com/missaoambiental.org/" target="_blank"><img src="/icones/facebook.png" alt="Facebook"></a>
+                    <a class="ms-3" href="https://www.instagram.com/missao.ambiental/" target="_blank"><img src="/icones/instagram.png" alt="Instagram"></a>
+                    <a class="btn btn-primary btn_footer mt-3" href="/html/contato.html" role="button">Contato</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="footer-bottom">
+              <p>&copy; Missão Ambiental, 2023</p>
+            </div>
+          </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <script src="/js/missaoambiental.js"></script>
     </body>
